--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Pinultimate UI</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
+  <h2>Buttons</h2>
+  <p>Styled for all interactions. Should be nested within a <code>button-container</code> when displaying inline buttons/links.</p>
+  <hr>
+  <div class="button-container">
+    <a class="button" href="#">Default Button</a>
+    <button type="button">Default Button</button>
+    <a class="display light" href="#">Display Link Light</a>
+  </div>
+  <div class="button-container">
+    <a class="button outline light" href="#">Outline Button Light</a>
+    <button class="outline light" type="button">Outline Button Light</button>
+    <a class="display light" href="#">Display Link Light</a>
+  </div>
+  <div class="button-container">
+    <button class="secondary" type="button">Secondary Button</button>
+    <button class="secondary" type="button">Secondary Button</button>
+    <a class="display" href="#">Display Link</a>
+  </div>
+  <div class="button-container">
+    <a class="button outline" href="#">Outline Button</a>
+    <button class="outline" type="button">Outline Button</button>
+    <a class="display" href="#">Display Link</a>
+  </div>
+
+  <script src="js/main.js"></script>
+
+</body>
+</html>
